changed the logo to make sure it covered the background always.

--- a/css/main.css
+++ b/css/main.css
@@ -1624,77 +1624,83 @@ h2 { margin-bottom: 8px; }
 /* line 1, ../../dev/sass/_header.scss */
 .header { padding-top: 6px; }
 /* line 5, ../../dev/sass/_header.scss */
-.header .logo { width: 20%; margin: 0 auto; background: -webkit-gradient(radial, 50% 10%, 0, 50% 10%, 100, color-stop(0%, #00a5cc), color-stop(100%, #2e5b66)); background: -webkit-radial-gradient(50% 10%, 100% 90%, #00a5cc, #2e5b66); background: -moz-radial-gradient(50% 10%, 100% 90%, #00a5cc, #2e5b66); background: -o-radial-gradient(50% 10%, 100% 90%, #00a5cc, #2e5b66); background: radial-gradient(50% 10%, 100% 90%, #00a5cc, #2e5b66); }
+.header .logo { width: 60%; margin: 0 auto; background: -webkit-gradient(radial, 50% 10%, 0, 50% 10%, 100, color-stop(0%, #00a5cc), color-stop(100%, #2e5b66)); background: -webkit-radial-gradient(50% 10%, 100% 90%, #00a5cc, #2e5b66); background: -moz-radial-gradient(50% 10%, 100% 90%, #00a5cc, #2e5b66); background: -o-radial-gradient(50% 10%, 100% 90%, #00a5cc, #2e5b66); background: radial-gradient(50% 10%, 100% 90%, #00a5cc, #2e5b66); }
+@media only screen and (min-width: 30em) { /* line 5, ../../dev/sass/_header.scss */
+  .header .logo { width: 25%; } }
+@media only screen and (min-width: 48em) { /* line 5, ../../dev/sass/_header.scss */
+  .header .logo { width: 20%; } }
+@media only screen and (min-width: 64em) { /* line 5, ../../dev/sass/_header.scss */
+  .header .logo { width: 15%; } }
 
-/* line 23, ../../dev/sass/_header.scss */
+/* line 19, ../../dev/sass/_header.scss */
 .name { text-transform: uppercase; text-align: center; font-size: 3em; font-weight: normal; line-height: 1; }
-/* line 31, ../../dev/sass/_header.scss */
+/* line 27, ../../dev/sass/_header.scss */
 .name .name--one { font-weight: 700; font-size: 0.9em; margin-top: 0.05em; }
-@media only screen and (max-width: 30em) { /* line 34, ../../dev/sass/_header.scss */
+@media only screen and (max-width: 30em) { /* line 30, ../../dev/sass/_header.scss */
   .name .names:before { content: ' '; display: inline; } }
-@media only screen and (min-width: 30em) { /* line 23, ../../dev/sass/_header.scss */
+@media only screen and (min-width: 30em) { /* line 19, ../../dev/sass/_header.scss */
   .name { position: absolute; top: 0; left: 0; width: 100%; font-size: 2em; margin-top: 12%; }
-  /* line 45, ../../dev/sass/_header.scss */
+  /* line 41, ../../dev/sass/_header.scss */
   .name .names { display: -moz-inline-stack; display: inline-block; vertical-align: middle; *vertical-align: auto; zoom: 1; *display: inline; width: 35%; }
-  /* line 49, ../../dev/sass/_header.scss */
+  /* line 45, ../../dev/sass/_header.scss */
   .name .name--one { margin-right: 30%; text-align: right; }
-  /* line 53, ../../dev/sass/_header.scss */
+  /* line 49, ../../dev/sass/_header.scss */
   .name .name--two { text-align: left; } }
-@media only screen and (min-width: 48em) { /* line 23, ../../dev/sass/_header.scss */
+@media only screen and (min-width: 48em) { /* line 19, ../../dev/sass/_header.scss */
   .name { font-size: 3em; margin-top: 7%; }
-  /* line 65, ../../dev/sass/_header.scss */
+  /* line 61, ../../dev/sass/_header.scss */
   .name .names { width: 37.5%; }
-  /* line 68, ../../dev/sass/_header.scss */
+  /* line 64, ../../dev/sass/_header.scss */
   .name .name--one { margin-right: 25%; } }
-@media only screen and (min-width: 64em) { /* line 23, ../../dev/sass/_header.scss */
-  .name { font-size: 4em; margin-top: 7%; }
-  /* line 80, ../../dev/sass/_header.scss */
-  .name .names { width: 37.5%; }
-  /* line 83, ../../dev/sass/_header.scss */
-  .name .name--one { margin-right: 25%; } }
+@media only screen and (min-width: 64em) { /* line 19, ../../dev/sass/_header.scss */
+  .name { font-size: 3.5em; margin-top: 4.5%; }
+  /* line 76, ../../dev/sass/_header.scss */
+  .name .names { width: 40%; }
+  /* line 79, ../../dev/sass/_header.scss */
+  .name .name--one { margin-right: 20%; } }
 
 /* line 1, ../../dev/sass/_nav.scss */
 .topnav { margin-top: 24px; font-size: 1.25em; text-transform: uppercase; }
 @media only screen and (min-width: 30em) { /* line 1, ../../dev/sass/_nav.scss */
   .topnav { margin-bottom: 1.2em; } }
 /* line 13, ../../dev/sass/_nav.scss */
-.topnav .nav { height: 100%; max-width: 1042px; margin: 0 auto; }
-@media only screen and (min-width: 30em) { /* line 13, ../../dev/sass/_nav.scss */
-  .topnav .nav { padding-top: 12px; } }
-/* line 24, ../../dev/sass/_nav.scss */
+.topnav .nav { height: 100%; width: 100%; max-width: 1042px; margin: 0 auto; }
+/* line 21, ../../dev/sass/_nav.scss */
 .topnav li { width: 100%; }
-/* line 26, ../../dev/sass/_nav.scss */
+/* line 23, ../../dev/sass/_nav.scss */
 .topnav li a { width: 100%; text-align: center; text-decoration: none; padding: 0.5em; border-bottom: 1px solid white; }
-/* line 35, ../../dev/sass/_nav.scss */
+/* line 32, ../../dev/sass/_nav.scss */
 .topnav li.current a { background-color: white; color: black; }
-@media only screen and (min-width: 30em) { /* line 35, ../../dev/sass/_nav.scss */
+@media only screen and (min-width: 30em) { /* line 32, ../../dev/sass/_nav.scss */
   .topnav li.current a { box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.42) inset; } }
-/* line 45, ../../dev/sass/_nav.scss */
+/* line 42, ../../dev/sass/_nav.scss */
 .topnav li:last-child a { border: none; }
-/* line 47, ../../dev/sass/_nav.scss */
+/* line 44, ../../dev/sass/_nav.scss */
 .topnav li.control a { background-color: rgba(0, 0, 0, 0.42); }
-/* line 53, ../../dev/sass/_nav.scss */
+/* line 50, ../../dev/sass/_nav.scss */
 .topnav .control.hide { display: none; }
-@media only screen and (max-width: 30.0625em) { /* line 1, ../../dev/sass/_nav.scss */
+@media only screen and (max-width: 29.9375em) { /* line 1, ../../dev/sass/_nav.scss */
   .topnav { overflow: hidden; max-height: 51px; -webkit-transition: max-height 1s ease-out, 1s; -moz-transition: max-height 1s ease-out, 1s; -o-transition: max-height 1s ease-out, 1s; transition: max-height 1s ease-out, 1s; margin-bottom: 24px; }
-  /* line 64, ../../dev/sass/_nav.scss */
+  /* line 61, ../../dev/sass/_nav.scss */
   .topnav:target, .topnav.show { max-height: 400px; }
-  /* line 66, ../../dev/sass/_nav.scss */
+  /* line 63, ../../dev/sass/_nav.scss */
   .topnav:target .menu, .topnav.show .menu { display: none; }
-  /* line 69, ../../dev/sass/_nav.scss */
+  /* line 66, ../../dev/sass/_nav.scss */
   .topnav:target .hide, .topnav.show .hide { display: block; } }
 @media only screen and (min-width: 30em) { /* line 1, ../../dev/sass/_nav.scss */
   .topnav { margin-top: 0; }
-  /* line 80, ../../dev/sass/_nav.scss */
+  /* line 77, ../../dev/sass/_nav.scss */
   .topnav .control { display: none; }
-  /* line 81, ../../dev/sass/_nav.scss */
-  .topnav .nav { display: table; width: 100%; }
-  /* line 85, ../../dev/sass/_nav.scss */
+  /* line 78, ../../dev/sass/_nav.scss */
+  .topnav .nav { display: table; padding: 12px 24px 0 24px; }
+  /* line 82, ../../dev/sass/_nav.scss */
   .topnav li { display: table-cell; width: auto; }
-  /* line 88, ../../dev/sass/_nav.scss */
+  /* line 85, ../../dev/sass/_nav.scss */
   .topnav li a { border: none; }
-  /* line 92, ../../dev/sass/_nav.scss */
-  .topnav li a:hover { background-color: #00a5cc; color: white; } }
+  /* line 89, ../../dev/sass/_nav.scss */
+  .topnav li a:hover { background-color: #00a5cc; color: white; }
+  /* line 93, ../../dev/sass/_nav.scss */
+  .topnav li a:hover.current { background-color: white; } }
 
 /* line 3, ../../dev/sass/_layout-duo.scss */
 .layout--duo.rev { direction: rtl; }
